# spotless_mini_explorer

./: CMakeLists.txt  LICENSE  README.md  package.xml  spotlessDocs
docs/html/: annotated.html  classes.html  classfrontierOps-members.html  classfrontierOps.html  classfrontierOps__inherit__graph.map  classfrontierOps__inherit__graph.md5  classpathPlanner-members.html  classpathPlanner.html  classpathPlanner__inherit__graph.map  classpathPlanner__inherit__graph.md5  dir_000002_000000.html  dir_000003_000000.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_ca83905b5dce2385d4bc43e9f42048c7.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  frontierOps_8cpp.html  frontierOps_8cpp__incl.map  frontierOps_8cpp__incl.md5  frontierOps_8hpp.html  frontierOps_8hpp__dep__incl.map  frontierOps_8hpp__dep__incl.md5  frontierOps_8hpp__incl.map  frontierOps_8hpp__incl.md5  frontierOps_8hpp_source.html  functions.html  functions_func.html  globals.html  globals_func.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherits.html  pathPlanner_8cpp.html  pathPlanner_8cpp__incl.map  pathPlanner_8cpp__incl.md5  pathPlanner_8hpp.html  (+11 more)
docs/latex/: annotated.tex  classfrontierOps.tex  classfrontierOps__inherit__graph.md5  classpathPlanner.tex  classpathPlanner__coll__graph.md5  dir_13e138d54eb8818da29c3992edef070a.tex  dir_13e138d54eb8818da29c3992edef070a_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_ca83905b5dce2385d4bc43e9f42048c7.tex  files.tex  frontierOps_8cpp.tex  hierarchy.tex  (+14 more)
launch/: demo.launch
results/: cppcheck_output.txt  cpplint_output.txt
src/: frontierOps.cpp  main.cpp  pathPlanner.cpp
test/: allTests.launch  main.cpp  testFrontierOps.cpp  testPathPlanner.cpp
(+21 files in other folders)
